--- a/templates/exporter.hbs
+++ b/templates/exporter.hbs
@@ -8,6 +8,13 @@
             <p class="hint">{{localize 'exportJournals.enrichHint'}}</p>
         </div>
         <div class="form-group">
+            <label>{{localize 'exportJournals.withImages'}}</label>
+            <div class="form-fields">
+                <input type="checkbox" name="withImages" checked>
+            </div>
+            <p class="hint">{{localize 'exportJournals.withImagesHint'}}</p>
+        </div>
+        <div class="form-group">
             <label>{{localize 'exportJournals.linkHandling'}}</label>
             <div class="form-fields">
                 <select name="removeLinks">
